[tool.poetry]
name = "nonebot-plugin-splatoon3"
version = "1.1.9"
description = "一个基于nonebot2框架的splatoon3游戏日程查询插件"
authors = ["cypas <ayano05@outlook.com>"]
readme = "README.md"
packages = [{include = "nonebot_plugin_splatoon3"}]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4="^4.12.2"
cfscrape="^2.1.1"
httpx="^0.24.1"
nonebot2="^2.0.0"
Pillow="9.5.0"
playwright="^1.35.0"
urllib3="1.26.16"
requests="^2.28.2"
nonebot-adapter-onebot = "^2.1.3"
nonebot-adapter-telegram= "^0.1.0b14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
